# amazon_bedrock_iso

./: README.md  main.py  pyproject.toml
power_weather_test_db/real_power_weather.lance/_transactions/: 0-06d55afa-ca61-4477-944d-ac379fccec5e.txn  1-c4327e65-7520-4da0-a327-92a27820490c.txn
power_weather_test_db/real_power_weather.lance/data/: 3224d6e7-03ac-47da-8d2e-d5082e37c6b5.lance
