[project]
name = "amazon-bedrock-iso"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.40.22",
    "boto3-stubs==1.40.22",
    "datasets>=4.0.0",
    "lancedb>=0.24.3",
    "pydantic==2.11.7",
    "requests==2.32.5",
    "sentence-transformers>=5.1.0",
]
